{
    "name": "TouchControl",
    "maps": [
        {
            "name": "Touch",
            "id": "36b49648-a421-43e5-9bef-b0bf9e503aa3",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "749b5e09-e20e-4af3-9d9d-454f9cc26f21",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "b973d6d3-284c-4fe5-8e53-7d6f92ed66d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "9a5d81d9-f556-4f1b-b9d7-c4ae2cc4a302",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "577060b1-634c-41bf-bb1f-565a752928dc",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cf3ab6f-cf6e-4d8b-922f-a7bdb690d81a",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fa2d00f-65b6-4bba-b2ab-075706c2e20c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}